@@ -21,9 +21,10 @@ package org.neo4j.cypher.internal.executionplan.builders
 
 import org.neo4j.cypher.internal.executionplan.{ExecutionPlanInProgress, PlanBuilder}
 import org.neo4j.graphdb.GraphDatabaseService
-import org.neo4j.cypher.internal.commands.{StartItem, CreateRelationshipStartItem, CreateNodeStartItem}
 import org.neo4j.cypher.internal.pipes.{Pipe, ExecuteUpdateCommandsPipe, TransactionStartPipe}
-import org.neo4j.cypher.internal.mutation.{UpdateAction}
+import org.neo4j.cypher.internal.mutation.UpdateAction
+import org.neo4j.cypher.internal.symbols.{NodeType, Identifier, SymbolTable}
+import org.neo4j.cypher.internal.commands._
 
 
 class CreateNodesAndRelationshipsBuilder(db: GraphDatabaseService) extends PlanBuilder {
@@ -31,6 +32,7 @@ class CreateNodesAndRelationshipsBuilder(db: GraphDatabaseService) extends PlanB
     val q = plan.query
     val mutatingQueryTokens = q.start.filter(applicableTo(plan.pipe))
     val commands = mutatingQueryTokens.map(_.token.asInstanceOf[UpdateAction])
+    val allCommands = expandCommands(commands, plan.pipe.symbols)
 
     val p = if (plan.containsTransaction) {
       plan.pipe
@@ -38,13 +40,44 @@ class CreateNodesAndRelationshipsBuilder(db: GraphDatabaseService) extends PlanB
       new TransactionStartPipe(plan.pipe, db)
     }
 
-    val resultPipe = new ExecuteUpdateCommandsPipe(p, db, commands)
+    val resultPipe = new ExecuteUpdateCommandsPipe(p, db, allCommands)
     val resultQuery = q.start.filterNot(mutatingQueryTokens.contains) ++ mutatingQueryTokens.map(_.solve)
 
     plan.copy(query = q.copy(start = resultQuery), pipe = resultPipe, containsTransaction = true)
   }
 
-  def applicableTo(pipe:Pipe)(start:QueryToken[StartItem]) = start match {
+  private def expandCommands(commands: Seq[UpdateAction], symbols: SymbolTable): Seq[UpdateAction] = {
+    val missingCreateNodeActions = commands.flatMap {
+      case createNode: CreateNodeStartItem => Seq()
+      case createRel: CreateRelationshipStartItem =>
+        alsoCreateNode(createRel.from, symbols, commands) ++
+          alsoCreateNode(createRel.to, symbols, commands)
+      case x => Seq()
+    }
+
+    missingCreateNodeActions.distinct ++ commands
+  }
+
+  private def alsoCreateNode(e: Expression, symbols: SymbolTable, commands: Seq[UpdateAction]): Seq[UpdateAction] = e match {
+    case Entity(name) =>
+      val nodeFromUnderlyingPipe = symbols.satisfies(Seq(Identifier(name, NodeType())))
+      val nodeFromOtherCommand = commands.exists {
+        case CreateNodeStartItem(n, _) => n == name
+        case _ => false
+      }
+
+      if (!nodeFromUnderlyingPipe && !nodeFromOtherCommand)
+        Seq(CreateNodeStartItem(name, Map()))
+      else
+        Seq()
+
+    case _ => Seq()
+  }
+
+
+  //key: String, from: Expression, to: Expression, typ: String, props: Map[String, Expression])
+
+  def applicableTo(pipe: Pipe)(start: QueryToken[StartItem]) = start match {
     case Unsolved(x: CreateNodeStartItem) => pipe.symbols.satisfies(x.dependencies.toSeq)
     case Unsolved(x: CreateRelationshipStartItem) => pipe.symbols.satisfies(x.dependencies.toSeq)
     case _ => false
@@ -56,7 +89,7 @@ class CreateNodesAndRelationshipsBuilder(db: GraphDatabaseService) extends PlanB
     case _ => Seq()
   }.map(_.name)
 
-  def canWorkWith(plan: ExecutionPlanInProgress) = plan.query.start.exists( applicableTo(plan.pipe))
+  def canWorkWith(plan: ExecutionPlanInProgress) = plan.query.start.exists(applicableTo(plan.pipe))
 
   def priority = PlanBuilder.Mutation
 }
