@@ -22,10 +22,10 @@ package org.neo4j.cypher.internal.executionplan.builders
 import org.neo4j.cypher.internal.executionplan.PartiallySolvedQuery
 import org.junit.Test
 import org.junit.Assert._
-import org.neo4j.cypher.internal.commands.{NodeById, CreateNodeStartItem}
 import org.hamcrest.core.IsInstanceOf.instanceOf
 import org.hamcrest.core.IsNot.not
 import org.neo4j.cypher.internal.pipes.{TransactionStartPipe, ExecuteUpdateCommandsPipe}
+import org.neo4j.cypher.internal.commands._
 
 class CreateNodesAndRelationshipsBuilderTest extends BuilderTest {
 
@@ -46,23 +46,51 @@ class CreateNodesAndRelationshipsBuilderTest extends BuilderTest {
 
     assertTrue("Should be able to build on this", builder.canWorkWith(plan(q)))
   }
-  
+
+  @Test
+  def full_path() {
+    val q = PartiallySolvedQuery().copy(start = Seq(
+      Unsolved(CreateRelationshipStartItem("r1", Entity("a"), Entity("  UNNAMED1"), "KNOWS", Map())),
+      Unsolved(CreateRelationshipStartItem("r2", Entity("b"), Entity("  UNNAMED1"), "LOVES", Map()))))
+
+
+    val startPipe = createPipe(Seq("a", "b"))
+
+    assertTrue("Should be able to build on this", builder.canWorkWith(plan(startPipe, q)))
+  }
+
+  @Test
+  def single_relationship_missing_nodes() {
+    val q = PartiallySolvedQuery().copy(start = Seq(
+      Unsolved(CreateRelationshipStartItem("r", Entity("a"), Entity("b"), "LOVES", Map()))))
+
+    assertTrue("Should be able to build on this", builder.canWorkWith(plan(q)))
+  }
+
+  @Test
+  def single_relationship_missing_nodes_with_expression() {
+    val q = PartiallySolvedQuery().copy(updates = Seq(
+      Unsolved(CreateRelationshipStartItem("r", HeadFunction(Entity("p")), Entity("b"), "LOVES", Map()))))
+
+    assertFalse("Should not be able to build on this", builder.canWorkWith(plan(q)))
+  }
+
   @Test
   def inserts_tx_start_pipe() {
     val q = PartiallySolvedQuery().
       copy(start = Seq(Unsolved(CreateNodeStartItem("r", Map()))))
 
     val resultPlan = builder(plan(q))
-    
-    assertTrue("The execution plan should be markes as containing a transaction",  resultPlan.containsTransaction)
-    
+
+    assertTrue("The execution plan should be markes as containing a transaction", resultPlan.containsTransaction)
+
     val p = resultPlan.pipe.asInstanceOf[ExecuteUpdateCommandsPipe]
-    
+
     val inner = p.source
-    
+
     assertThat(inner, instanceOf(classOf[TransactionStartPipe]))
   }
-  
+
   @Test
   def does_not_start_transaction() {
     val q = PartiallySolvedQuery().
@@ -70,11 +98,11 @@ class CreateNodesAndRelationshipsBuilderTest extends BuilderTest {
 
     val inputPlan = plan(q).copy(containsTransaction = true)
     val resultPlan = builder(inputPlan)
-    
+
     assertTrue(resultPlan.containsTransaction)
-    
+
     val inner = resultPlan.pipe.asInstanceOf[ExecuteUpdateCommandsPipe].source
-    
+
     assertThat(inner, not(instanceOf(classOf[TransactionStartPipe])))
   }
 }
